Bug 43456 - String formatting fixes
Summary: String formatting fixes
Status: RESOLVED FIXED
Alias: None
Product: Spice
Classification: Unclassified
Component: spice-gtk (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Spice Bug List
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-02 01:13 UTC by Olav Vitters
Modified: 2011-12-02 04:21 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
patch (1.19 KB, patch)
2011-12-02 01:13 UTC, Olav Vitters
Details | Splinter Review

Description Olav Vitters 2011-12-02 01:13:17 UTC
Created attachment 54054 [details] [review]
patch

Mageia has a patch to fix some string format issues. See attached.
Comment 1 Christophe Fergeau 2011-12-02 04:10:42 UTC
+      g_message ("notify::%s == %s", G_OBJECT_TYPE_NAME (o), "");
is weird

g_message ("notify::%s == %p", G_OBJECT_TYPE_NAME (o), o);
would be better, or 
g_message ("notify::%s", G_OBJECT_TYPE_NAME (o));
Comment 2 Marc-Andre Lureau 2011-12-02 04:21:47 UTC
commit e83f5a7c2c98aae96bee57bda9590e70dbbcb62e
Author: Marc-André Lureau <marcandre.lureau@redhat.com>
Date:   Fri Dec 2 13:19:30 2011 +0100

    string formatting fixes
    
    Patch based on Mageia, provided by Olav Vitters.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=43456


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.