string formatting fixes

Patch based on Mageia, provided by Olav Vitters.

https://bugs.freedesktop.org/show_bug.cgi?id=43456